R_prac/retrain_r/shiny_app/shiny-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress 
metadata:
  name: r-ingress-nginx
